--- a/Verifica1A/templates/home1.html
+++ b/Verifica1A/templates/home1.html
@@ -1,4 +1,4 @@
-<form action="/selezione">
+<form action="/selezione" methods="GET">
 
  
     <input type="radio" name="scelta" value="es1">Esercizio 1<br>
